--- a/magnolia-empty-webapp/pom.xml
+++ b/magnolia-empty-webapp/pom.xml
@@ -66,6 +66,11 @@
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
+      <artifactId>magnolia-module-wcm</artifactId>
+      <version>5.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>info.magnolia</groupId>
       <artifactId>magnolia-taglib-utility</artifactId>
       <version>5.0-SNAPSHOT</version>
     </dependency>
@@ -206,9 +211,10 @@
           </execution>
         </executions>
         <configuration>
-          <module>info.magnolia.module.genuinecentral.AdminCentral</module>
-          <runTarget>Magnolia.html</runTarget>
-          <hostedWebapp>target/${project.name}-${project.version}</hostedWebapp>
+          <module>info.magnolia.module.webapp.AllTogetherNow</module>
+          <runTarget>.resources/Magnolia.html</runTarget>
+          <hostedWebapp>${basedir}/src/main/webapp</hostedWebapp>
+          <warSourceDirectory>${basedir}/src/main/webapp</warSourceDirectory>
           <port>8080</port>
           <debugPort>8000</debugPort>
           <debugSuspend>false</debugSuspend>
