And added wcm to the reactor.
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@35435 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/pom.xml
+++ b/pom.xml
@@ -692,6 +692,7 @@ for Java Content Repositories (JCR).
     <module>magnolia-module-fckeditor</module>
     <module>magnolia-module-admininterface</module>
     <module>magnolia-admin-central</module>
+    <module>magnolia-module-wcm</module>
     <module>magnolia-module-cache</module>
     <module>magnolia-module-templating-components</module>
     <module>magnolia-taglib-cms</module>
