--- a/magnolia-admin-central/pom.xml
+++ b/magnolia-admin-central/pom.xml
@@ -55,6 +55,18 @@
       <artifactId>magnolia-module-fckeditor</artifactId>
       <version>5.0-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+    	<groupId>com.google.gwt</groupId>
+    	<artifactId>gwt-dev</artifactId>
+    	<version>2.0.4</version>
+    	<type>jar</type>
+    	<scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
