--- a/magnolia-module-templating/pom.xml
+++ b/magnolia-module-templating/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>magnolia-project</artifactId>
     <groupId>info.magnolia</groupId>
-    <version>4.3.5-SNAPSHOT</version>
+    <version>4.3.5</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -13,12 +13,12 @@
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-core</artifactId>
-      <version>4.3.5-SNAPSHOT</version>
+      <version>4.3.5</version>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-gui</artifactId>
-      <version>4.3.5-SNAPSHOT</version>
+      <version>4.3.5</version>
     </dependency>
     <dependency>
       <groupId>commons-lang</groupId>
@@ -49,7 +49,7 @@
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-core</artifactId>
-      <version>4.3.5-SNAPSHOT</version>
+      <version>4.3.5</version>
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
