- Broken AdminCentral code in more smaller chunks. - Removed extra tabs from the current UI and bound the trees display to the menu entries. - Renamed modules and entry points to make their purpose more clear.
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@36024 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-empty-webapp/pom.xml
+++ b/magnolia-empty-webapp/pom.xml
@@ -211,7 +211,7 @@
           </execution>
         </executions>
         <configuration>
-          <module>info.magnolia.module.webapp.AllTogetherNow</module>
+          <module>info.magnolia.module.webapp.AdminCentralGWTModuleAggregator</module>
           <runTarget>.resources/Magnolia.html</runTarget>
           <hostedWebapp>${basedir}/src/main/webapp</hostedWebapp>
           <warSourceDirectory>${basedir}/src/main/webapp</warSourceDirectory>
