BUILD-35 deploy site to nexus
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@36179 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/pom.xml
+++ b/pom.xml
@@ -654,12 +654,13 @@ for Java Content Repositories (JCR).
   </dependencyManagement>
   <distributionManagement>
     <site>
-      <id>dev.magnolia-cms.com</id>
-      <name>dev.magnolia-cms.com</name>
-      <url>scp://dev.magnolia-cms.com/sites/dev/ref/${project.version}</url>
+      <id>magnolia.public.sites</id>
+      <url>dav:http://nexus.magnolia-cms.com/content/sites/magnolia.public.sites/ref/${artifactId}/${project.version}</url>
     </site>
     <downloadUrl>http://prdownloads.sourceforge.net/magnolia</downloadUrl>
   </distributionManagement>
+
+  <!-- TODO - get rid of this ?? -->
   <repositories>
     <!-- just a little trick for folks who don't have our parent pom in their local repo yet -->
     <repository>
