--- a/magnolia-rest/pom.xml
+++ b/magnolia-rest/pom.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
-   <artifactId>magnolia-project</artifactId>
+    <artifactId>magnolia-project</artifactId>
     <groupId>info.magnolia</groupId>
     <version>5.0-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>magnolia-rest</artifactId>
-    <packaging>jar</packaging>
+  <packaging>jar</packaging>
 
   <name>Magnolia REST API</name>
 
@@ -47,6 +47,11 @@
     <dependency>
       <groupId>org.jboss.resteasy</groupId>
       <artifactId>resteasy-jackson-provider</artifactId>
+    </dependency>
+    <!-- org.scannotation.scannotation excluded from resteasy, replaced by net.sf.scannotation:scannotation -->
+    <dependency>
+      <groupId>net.sf.scannotation</groupId>
+      <artifactId>scannotation</artifactId>
     </dependency>
   </dependencies>
 </project>
