--- a/magnolia-empty-webapp/pom.xml
+++ b/magnolia-empty-webapp/pom.xml
@@ -61,12 +61,7 @@
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
-      <artifactId>magnolia-admin-central</artifactId>
-      <version>5.0-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>info.magnolia</groupId>
-      <artifactId>magnolia-module-wcm</artifactId>
+      <artifactId>magnolia-module-admincentral-vaadin</artifactId>
       <version>5.0-SNAPSHOT</version>
     </dependency>
     <dependency>
