--- a/pom.xml
+++ b/pom.xml
@@ -281,14 +281,14 @@ for Java Content Repositories (JCR).
   <dependencyManagement>
     <dependencies>
       <dependency>
+        <groupId>com.vaadin</groupId>
+        <artifactId>vaadin</artifactId>
+        <version>6.4.1</version>
+      </dependency>
+      <dependency>
         <groupId>com.google.gwt</groupId>
         <artifactId>gwt-user</artifactId>
         <version>2.0.3</version>
-      </dependency>
-      <dependency>
-        <groupId>com.extjs</groupId>
-        <artifactId>gxt</artifactId>
-        <version>2.1.1</version>
       </dependency>
       <dependency>
         <groupId>javax.xml.bind</groupId>
@@ -732,8 +732,11 @@ for Java Content Repositories (JCR).
     <module>magnolia-module-exchange-simple</module>
     <module>magnolia-module-fckeditor</module>
     <module>magnolia-module-admininterface</module>
+    <module>magnolia-module-admincentral-vaadin</module>
+    <!--
     <module>magnolia-admin-central</module>
     <module>magnolia-module-wcm</module>
+    -->
     <module>magnolia-module-cache</module>
     <module>magnolia-module-templating-components</module>
     <module>magnolia-taglib-cms</module>
