--- a/magnolia-gui/pom.xml
+++ b/magnolia-gui/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>magnolia-project</artifactId>
     <groupId>info.magnolia</groupId>
-    <version>4.3.6-SNAPSHOT</version>
+    <version>4.3.6</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -13,7 +13,7 @@
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-core</artifactId>
-      <version>4.3.6-SNAPSHOT</version>
+      <version>4.3.6</version>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
@@ -69,7 +69,7 @@
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-core</artifactId>
-      <version>4.3.6-SNAPSHOT</version>
+      <version>4.3.6</version>
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
