vaadin-treetable is now in our thirdparty repo, as well as vaadin snapshots
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@36301 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/pom.xml
+++ b/pom.xml
@@ -280,6 +280,11 @@ for Java Content Repositories (JCR).
         <version>6.4.1</version>
       </dependency>
       <dependency>
+        <groupId>com.vaadin.addon</groupId>
+        <artifactId>vaadin-treetable</artifactId>
+        <version>0.4.0</version>
+      </dependency>
+      <dependency>
         <groupId>com.google.gwt</groupId>
         <artifactId>gwt-user</artifactId>
         <version>2.0.3</version>
