--- a/magnolia-module-admincentral-vaadin/pom.xml
+++ b/magnolia-module-admincentral-vaadin/pom.xml
@@ -1,34 +1,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
-   <artifactId>magnolia-project</artifactId>
     <groupId>info.magnolia</groupId>
+    <artifactId>magnolia-project</artifactId>
     <version>5.0-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
-  <groupId>info.magnolia</groupId>
   <artifactId>magnolia-module-admincentral-vaadin</artifactId>
+  <name>magnolia-module-admincentral-vaadin</name>
   <packaging>jar</packaging>
-  <version>5.0-SNAPSHOT</version>
-  <name>Magnolia Vaadin AdminCentral Application</name>
-
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
-
-  <description>The new Magnolia AdminCentral based on Vaadin</description>
   <build>
     <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>1.5</source>
-          <target>1.5</target>
-        </configuration>
-      </plugin>
-
       <!-- Compile custom GWT components or widget dependencies with the GWT compiler -->
       <!--
       <plugin>
@@ -92,69 +75,15 @@
       </plugin>
     </plugins>
   </build>
-<!--
-  <repositories>
-    <repository>
-      <id>vaadin-snapshots</id>
-      <url>https://oss.sonatype.org/content/repositories/vaadin-snapshots/</url>
-      <releases>
-        <enabled>false</enabled>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-    </repository>
-    -->
-    <!--
-       a clever trick for non 'mavenized' dependencies without resorting to mvn:install-file or the deprecated system scope and system path.
-       See http://brettporter.wordpress.com/2009/06/10/a-maven-friendly-pattern-for-storing-dependencies-in-version-control/
-    -->
-    <!--
-    <repository>
-      <id>local</id>
-      <url>file:${basedir}/src/repository</url>
-       <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-    </repository>
-  </repositories>
-  -->
 
-  <!--
-  <pluginRepositories>
-    <pluginRepository>
-      <id>mojo-snapshots</id>
-      <url>http://snapshots.repository.codehaus.org/</url>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-      <releases>
-        <enabled>false</enabled>
-      </releases>
-    </pluginRepository>
-    <pluginRepository>
-      <id>vaadin-snapshots</id>
-      <url>http://oss.sonatype.org/content/repositories/vaadin-snapshots/</url>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-      <releases>
-        <enabled>false</enabled>
-      </releases>
-    </pluginRepository>
-  </pluginRepositories>
-  -->
   <dependencies>
     <dependency>
       <groupId>com.vaadin</groupId>
       <artifactId>vaadin</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.vaadin</groupId>
+      <groupId>com.vaadin.addon</groupId>
       <artifactId>vaadin-treetable</artifactId>
-      <version>0.4.0</version>
-      <scope>system</scope>
-      <systemPath>${basedir}/src/repository/com/vaadin/vaadin-treetable/0.4.0/vaadin-treetable-0.4.0.jar</systemPath>
     </dependency>
     <dependency>
       <groupId>com.google.gwt</groupId>
