BUILD-35: not deploying in /${artifactId}/ subdirectory for main project
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@36337 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/pom.xml
+++ b/pom.xml
@@ -694,7 +694,7 @@ for Java Content Repositories (JCR).
   <distributionManagement>
     <site>
       <id>magnolia.public.sites</id>
-      <url>dav:http://nexus.magnolia-cms.com/content/sites/magnolia.public.sites/ref/${artifactId}/${project.version}</url>
+      <url>dav:http://nexus.magnolia-cms.com/content/sites/magnolia.public.sites/ref/${project.version}</url>
     </site>
     <downloadUrl>http://sourceforge.net/projects/magnolia/files/</downloadUrl>
   </distributionManagement>
