--- a/pom.xml
+++ b/pom.xml
@@ -689,6 +689,11 @@ for Java Content Repositories (JCR).
           </exclusion>
         </exclusions>
       </dependency>
+      <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.8.1</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
   <distributionManagement>
