--- a/magnolia-empty-webapp/pom.xml
+++ b/magnolia-empty-webapp/pom.xml
@@ -138,6 +138,29 @@
       </resource>
     </resources>
     <plugins>
+      <!-- delete inplace webapp stuff -->
+      <plugin>
+        <artifactId>maven-clean-plugin</artifactId>
+        <configuration>
+          <filesets>
+            <fileset>
+              <directory>src/main/webapp/cache</directory>
+            </fileset>
+            <fileset>
+              <directory>src/main/webapp/logs</directory>
+            </fileset>
+            <fileset>
+              <directory>src/main/webapp/repositories</directory>
+            </fileset>
+            <fileset>
+              <directory>src/main/webapp/templates</directory>
+            </fileset>
+            <fileset>
+              <directory>src/main/webapp/tmp</directory>
+            </fileset>
+          </filesets>
+        </configuration>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
