--- a/magnolia-module-admincentral-vaadin/pom.xml
+++ b/magnolia-module-admincentral-vaadin/pom.xml
@@ -99,6 +99,16 @@
       <artifactId>junit</artifactId>
       <scope>test</scope>
     </dependency>
+        <dependency>
+      <groupId>org.easymock</groupId>
+      <artifactId>easymock</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.easymock</groupId>
+      <artifactId>easymockclassextension</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
 </project>
