C2B for dialogs & first test with proposed new structure of the dialog content nodes. Started to rename "control" to "field" in order to make dialogs easier to understand to new users.
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@36417 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admincentral-vaadin/pom.xml
+++ b/magnolia-module-admincentral-vaadin/pom.xml
@@ -114,6 +114,13 @@
       <artifactId>easymockclassextension</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>info.magnolia</groupId>
+      <artifactId>magnolia-core</artifactId>
+      <version>5.0-SNAPSHOT</version>
+      <type>test-jar</type>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
 </project>
