added comment re BUILD-28
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/branches/magnolia-4.3@36536 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-core/pom.xml
+++ b/magnolia-core/pom.xml
@@ -194,6 +194,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>buildnumber-maven-plugin</artifactId>
+        <!-- TODO this configuration can go if we upgrade to parent pom 17 - See http://jira.magnolia-cms.com/browse/BUILD-28 -->
         <version>1.0-beta-4</version>
         <executions>
           <execution>
