the wcm module will contribute the page editor which is an independent Vaadin Application with a custom widgetset
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@36644 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/pom.xml
+++ b/pom.xml
@@ -710,6 +710,7 @@ for Java Content Repositories (JCR).
     <module>magnolia-module-workflow</module>
     <module>magnolia-module-samples</module>
     <module>magnolia-module-store-client</module>
+    <module>magnolia-module-wcm</module>
     <module>magnolia-empty-webapp</module>
   </modules>
 </project>
