--- a/magnolia-empty-webapp/pom.xml
+++ b/magnolia-empty-webapp/pom.xml
@@ -126,6 +126,11 @@
       <artifactId>junit</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    	<groupId>info.magnolia</groupId>
+    	<artifactId>magnolia-module-wcm</artifactId>
+    	<version>5.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
   <build>
     <resources>
