--- a/magnolia-module-templating-components/pom.xml
+++ b/magnolia-module-templating-components/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>magnolia-project</artifactId>
     <groupId>info.magnolia</groupId>
-    <version>5.0-SNAPSHOT</version>
+    <version>5.0-m1</version>
   </parent>
   <groupId>info.magnolia</groupId>
   <artifactId>magnolia-module-templating-components</artifactId>
@@ -45,13 +45,13 @@
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-core</artifactId>
-      <version>5.0-SNAPSHOT</version>
+      <version>5.0-m1</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-gui</artifactId>
-      <version>5.0-SNAPSHOT</version>
+      <version>5.0-m1</version>
       <scope>provided</scope>
     </dependency>
     <!-- dependency
@@ -64,7 +64,7 @@
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-module-templating</artifactId>
-      <version>5.0-SNAPSHOT</version>
+      <version>5.0-m1</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -92,7 +92,7 @@
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-core</artifactId>
       <type>test-jar</type>
-      <version>5.0-SNAPSHOT</version>
+      <version>5.0-m1</version>
       <scope>test</scope>
     </dependency>
     <dependency>
