--- a/magnolia-module-wcm/pom.xml
+++ b/magnolia-module-wcm/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>magnolia-project</artifactId>
     <groupId>info.magnolia</groupId>
-    <version>5.0-SNAPSHOT</version>
+    <version>5.0-m1</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -13,12 +13,12 @@
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-core</artifactId>
-      <version>5.0-SNAPSHOT</version>
+      <version>5.0-m1</version>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-module-admincentral-vaadin</artifactId>
-      <version>5.0-SNAPSHOT</version>
+      <version>5.0-m1</version>
     </dependency>
     <dependency>
       <groupId>com.google.gwt</groupId>
