--- a/magnolia-core/pom.xml
+++ b/magnolia-core/pom.xml
@@ -191,6 +191,19 @@
           </execution>
         </executions>
       </plugin>
+      <!-- let's also attach the test sources -->
+      <plugin>
+        <artifactId>maven-source-plugin</artifactId>
+        <version>2.1.2</version>
+        <executions>
+          <execution>
+            <id>attach-test-sources</id>
+            <goals>
+              <goal>test-jar-no-fork</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>buildnumber-maven-plugin</artifactId>
