--- a/magnolia-module-admincentral-vaadin/pom.xml
+++ b/magnolia-module-admincentral-vaadin/pom.xml
@@ -11,52 +11,62 @@
   <packaging>jar</packaging>
   <build>
     <plugins>
-      <!-- Compile custom GWT components or widget dependencies with the GWT compiler -->
-
-      <!-- why are we useing 1.3-SNAPSHOT? this requires maven 2.1 but hudson uses 2.0 - will have to fix that
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>gwt-maven-plugin</artifactId>
-        <version>1.3-SNAPSHOT</version>
-        <executions>
-          <execution>
-            <configuration>
-              <webappDirectory>${project.build.directory}/${project.build.finalName}/VAADIN/widgetsets</webappDirectory>
-              <extraJvmArgs>-Xmx512M -Xss1024k</extraJvmArgs>
-              <runTarget>/AdminCentral/</runTarget>
-              <hostedWebapp>${project.build.directory}/${project.build.finalName}</hostedWebapp>
-              <noServer>true</noServer>
-              <port>8080</port>
-              <soyc>false</soyc>
-            </configuration>
-            <goals>
-              <goal>resources</goal>
-              <goal>compile</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>com.vaadin</groupId>
-        <artifactId>vaadin-maven-plugin</artifactId>
-        <version>1.0.0</version>
-        <executions>
-          <execution>
-            <configuration>
-            </configuration>
-            <goals>
-              <goal>update-widgetset</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      -->
-      <plugin>
+        <plugin>
         <!-- TODO this is temporary ! Parent disables the validation due to amount of errors in the project, but this new module enables it explicitly. No more errors on new code !! -->
         <artifactId>maven-checkstyle-plugin</artifactId>
         <configuration>
           <failOnViolation>true</failOnViolation>
         </configuration>
+      </plugin>
+
+       <plugin>
+         <groupId>org.apache.maven.plugins</groupId>
+         <artifactId>maven-dependency-plugin</artifactId>
+         <version>2.1</version>
+         <executions>
+           <execution>
+             <id>unpack</id>
+             <phase>process-resources</phase>
+             <goals>
+               <goal>unpack</goal>
+             </goals>
+             <configuration>
+               <artifactItems>
+                 <artifactItem>
+                    <groupId>com.vaadin</groupId>
+                    <artifactId>vaadin</artifactId>
+                 </artifactItem>
+               </artifactItems>
+               <outputDirectory>${project.build.directory}/classes/mgnl-resources</outputDirectory>
+               <includes>VAADIN/themes/**</includes>
+             </configuration>
+           </execution>
+         </executions>
+       </plugin>
+
+      <!-- Compile custom GWT components or widget dependencies with the GWT compiler -->
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>gwt-maven-plugin</artifactId>
+        <!-- http://jira.codehaus.org/browse/MGWT-183 -->
+        <version>1.3-SNAPSHOT</version>
+        <configuration>
+          <!-- put the created resources on the classpath -->
+          <webappDirectory>target/classes/mgnl-resources/VAADIN/widgetsets</webappDirectory>
+          <!-- this is not a webapp -->
+          <noServer>true</noServer>
+          <module>info.magnolia.module.admincentral.widgetset.AdminCentralWidgetset</module>
+          <!-- <draftCompile>true</draftCompile> -->
+          <!-- <style>PRETTY</style> -->
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>resources</goal>
+              <goal>compile</goal>
+             </goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
@@ -85,6 +95,11 @@
       <artifactId>magnolia-module-templating</artifactId>
       <version>5.0-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <groupId>info.magnolia</groupId>
+      <artifactId>magnolia-module-cache</artifactId>
+      <version>5.0-SNAPSHOT</version>
+      </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
