--- a/magnolia-module-admincentral-vaadin/pom.xml
+++ b/magnolia-module-admincentral-vaadin/pom.xml
@@ -51,6 +51,8 @@
         <!-- http://jira.codehaus.org/browse/MGWT-183 -->
         <version>1.3-SNAPSHOT</version>
         <configuration>
+          <!-- the target/classes directory is cleaned regularly. You can use mvn gwt:compile -Dgwt.inplace to store the output in the resouce folder-->
+          <warSourceDirectory>src/main/resources/mgnl-resources/VAADIN/widgetsets</warSourceDirectory>
           <!-- put the created resources on the classpath -->
           <webappDirectory>target/classes/mgnl-resources/VAADIN/widgetsets</webappDirectory>
           <!-- this is not a webapp -->
